--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			<div id="search"> <input type="text" placeholder="Search.."> </div>
 			</header>
 				<nav>
+				<a href = "bestellen.html"> Koop nu voor €15.00 </a>
 				<h2>Op deze webshop kunt u verschillende soorten heerlijke tompouzen kopen.</h2>
 				</nav>
 				<article>
