--- a/bestellen.html
+++ b/bestellen.html
@@ -9,6 +9,10 @@
 	</head>
 				<body> 
 				<div id="Ga terug">
+				<a href = "index.html"> ga terug </a>
+				</div>
+				<div id="koop nu">
+				<a href = "index.html"> koop nu</a>
 				</div>
 				</body>
 </html>
